--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(TextDetection)
 find_package(OpenCV REQUIRED)
 find_package(Boost 1.68.0 COMPONENTS system filesystem REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(SOURCE_FILES main.cpp ConnectedComponents.cpp ConnectedComponents.h)
+set(SOURCE_FILES main.cpp ConnectedComponents.cpp ConnectedComponents.h camshift.cpp)
 set(CMAKE_INCLUDE_PATH /usr/local/lib)
 add_executable(TextDetection main.cpp StrokeWidthTransform.cpp StrokeWidthTransform.h ${SOURCE_FILES})
 
