added tools for marking data, erosion and dilating for improving swt components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(OpenCV REQUIRED)
 find_package(Boost 1.68.0 COMPONENTS system filesystem REQUIRED)
 find_package(Protobuf REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(SOURCE_FILES main.cpp ConnectedComponents.cpp ConnectedComponents.h Components.pb.cc)
+set(SOURCE_FILES main.cpp ConnectedComponents.cpp ConnectedComponents.h Components.pb.cc ComponentsChain.cpp ComponentsChain.h)
 set(CMAKE_INCLUDE_PATH /usr/local/lib)
 add_executable(TextDetection main.cpp StrokeWidthTransform.cpp StrokeWidthTransform.h ${SOURCE_FILES})
 include_directories(${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PROTOBUF_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
