--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(TextDetection)
 
 set(OpenCV_DIR /opt/opencv-3.3.0/build)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 set(SOURCE_FILES main.cpp ConnectedComponents.cpp ConnectedComponents.h Components.pb.cc)
 set(CMAKE_INCLUDE_PATH /usr/local/lib)
 find_package(OpenCV REQUIRED)
